fix align

--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ z-index: -1;
     width: 20px;
     height: 20px;
     display: inline-block;
-    margin: 6px;
+    margin: 5.2px;
     position: relative;
   }
 
@@ -212,12 +212,12 @@ z-index: -1;
   }
 
   .correct-numbers-container {
-    border: 3px solid red;
+    border: 1px solid red;
     border-radius: 20px;
   }
 
   .wrong-number-container {
-    border: 3px solid #aaaaaa;
+    border: 1px solid #aaaaaa;
     border-radius: 20px;
   }
 
